# mercurial

./: .arcconfig  .editorconfig  .hgignore  .hgsigs  .hgtags  ChangeLog  Makefile  PKG-INFO  black.toml  hg  hgweb.cgi  pyproject.toml  rustfmt.toml  setup.py
1.6.4-1+deb6u1/debian/: control  rules
2.6.2-1~bpo70+1/debian/: rules
2.7.1-2~bpo70+1/debian/: mercurial-common.examples  mercurial.test_blacklist
2.7.2-1~bpo70+1/debian/: control  mercurial.test_blacklist
2.8.1-2~bpo70+1/debian/: changelog  mercurial.postinst  rules
2.8.2-1~bpo70+1/debian/: changelog  mercurial-common.bash-completion
3.1.2-2+deb8u1/debian/: changelog  control  mercurial-common.install
3.1.2-2+deb8u3/debian/: changelog
contrib/: Makefile.python  all-revsets.txt  base-revsets.txt  bdiff-torture.py  byteify-strings.py  casesmash.py  catapipe.py  check-code.py  check-commit  check-config.py  check-py3-compat.py  clang-format-ignorelist  debugcmdserver.py  debugshell.py  dirstatenonnormalcheck.py  dumprevlog  genosxversion.py  grey.py  heptapod-ci.yml  hg-ssh  hg-test-mode.el  hgclient.py  hgperf  hgweb.fcgi  import-checker.py  install-windows-dependencies.ps1  memory.py  perf.py  phab-clean.py  phab-refresh-stack.sh  python-hook-examples.py  python3-ratchet.py  python3-whitelist  relnotes  revsetbenchmarks.py  showstack.py  simplemerge  synthrepo.py  testparseutil.py  undumprevlog
contrib/benchmarks/: perf.py  (+2 more)
debian/: NEWS  README.Debian  changelog  control  control.in  copyright  dirs  docs  examples  gbp.conf  hgext.rc  mercurial-common.bash-completion  mercurial-common.dirs  mercurial-common.examples  mercurial-common.install  mercurial-common.lintian-overrides  mercurial-common.maintscript  mercurial-common.manpages  mercurial-common.postinst  mercurial-web.install  mercurial.dirs  mercurial.install  mercurial.manpages  mercurial.postinst  mercurial.preinst  mercurial.test_blacklist  postinst  preinst  rules  upstream-signing-key.pgp  watch
doc/: Makefile  check-seclevel.py  docchecker  gendoc.py  hg-ssh.8  hg-ssh.8.html  hg.1  hg.1.gendoc.txt  hg.1.html  hgignore.5  hgignore.5.html  hgmanpage.py  hgmerge.1  hgmerge.1.html  hgrc.5  hgrc.5.html  runrst
hgdemandimport/: __init__.py  demandimportpy2.py  demandimportpy3.py  tracing.py
hgext/: absorb.py  acl.py  amend.py  automv.py  beautifygraph.py  blackbox.py  bookflow.py  bugzilla.py  censor.py  churn.py  commitextras.py  eol.py  extdiff.py  fastexport.py  fetch.py  fix.py  githelp.py  gpg.py  graphlog.py  hgk.py  histedit.py  journal.py  keyword.py  mq.py  notify.py  patchbomb.py  phabricator.py  purge.py  rebase.py  record.py  releasenotes.py  remotenames.py  schemes.py  share.py  shelve.py  show.py  sparse.py  split.py  sqlitestore.py  strip.py  (+3 more)
i18n/: check-translation.py  da.po  de.po  hggettext  ja.po  polib.py  posplit  pt_BR.po  ro.po  ru.po  sv.po
mercurial/: __init__.py  __version__.py  ancestor.py  archival.py  bdiff.c  bookmarks.py  branchmap.py  bundle2.py  bundlerepo.py  changegroup.py  changelog.py  chgserver.py  cmdutil.py  color.py  commands.py  commandserver.py  config.py  configitems.py  context.py  copies.py  crecord.py  dagop.py  dagparser.py  debugcommands.py  destutil.py  diffutil.py  dirstate.py  dirstateguard.py  discovery.py  dispatch.py  encoding.py  error.py  exchange.py  exchangev2.py  extensions.py  exthelper.py  fancyopts.py  filelog.py  filemerge.py  fileset.py  (+89 more)
relnotes/: 5.3  5.4  5.5  5.6  5.7  5.8  next
rust/: Cargo.toml  README.rst
rust/chg/: Cargo.toml  build.rs
rust/chg/src/: attachio.rs  clientext.rs  lib.rs  locator.rs  main.rs  message.rs  procutil.rs  runcommand.rs  sighandlers.c  uihandler.rs
rust/hg-core/: Cargo.toml  build.rs
rust/hg-core/examples/nodemap/: index.rs  main.rs
rust/hg-core/src/: ancestors.rs  config.rs  copy_tracing.rs  dagops.rs  dirstate.rs  discovery.rs  errors.rs  filepatterns.rs  lib.rs  logging.rs  matchers.rs  repo.rs  requirements.rs  revlog.rs  revset.rs  testing.rs  utils.rs
rust/hg-core/src/config/: config.rs  layer.rs  values.rs
rust/hg-core/src/copy_tracing/: tests.rs  tests_support.rs
rust/hg-core/src/dirstate/: dirs_multiset.rs  dirstate_map.rs  dirstate_tree.rs  parsers.rs  status.rs
rust/hg-core/src/dirstate/dirstate_tree/: iter.rs  node.rs  tree.rs
rust/hg-core/src/operations/: cat.rs  debugdata.rs  dirstate_status.rs  find_root.rs  list_tracked_files.rs  mod.rs
rust/hg-core/src/re2/: mod.rs  re2.rs  rust_re2.cpp
rust/hg-core/src/revlog/: changelog.rs  index.rs  manifest.rs  node.rs  nodemap.rs  nodemap_docket.rs  patch.rs  path_encode.rs  revlog.rs
rust/hg-core/src/utils/: files.rs  hg_path.rs  path.rs  path_auditor.rs
rust/hg-core/tests/: test_missing_ancestors.rs
rust/hg-cpython/: Cargo.toml
rust/hg-cpython/src/: ancestors.rs  cindex.rs  conversion.rs  copy_tracing.rs  dagops.rs  debug.rs  dirstate.rs  discovery.rs  exceptions.rs  filepatterns.rs  lib.rs  parsers.rs  ref_sharing.rs  revlog.rs  utils.rs
rust/hg-cpython/src/dirstate/: copymap.rs  dirs_multiset.rs  dirstate_map.rs  non_normal_entries.rs  status.rs
rust/hgcli/: Cargo.toml  README.md  README.rst  build.rs  pyoxidizer.bzl
rust/hgcli/src/: main.rs
rust/rhg/: Cargo.toml  README.md
rust/rhg/src/: blackbox.rs  commands.rs  error.rs  exitcode.rs  main.rs  ui.rs
rust/rhg/src/commands/: cat.rs  config.rs  debugdata.rs  debugrequirements.rs  files.rs  root.rs  status.rs
tests/: autodiff.py  badserverext.py  basic_test_result.py  blackbox-readonly-dispatch.py  bruterebase.py  check-gendoc  check-perf-code.py  common-pattern.py  crashgetbundler.py  drawdag.py  dumbhttp.py  dummysmtpd.py  dummyssh  f  failfilemerge.py  fakedirstatewritetime.py  fakemergerecord.py  fakepatchtime.py  filterpyflakes.py  filtertraceback.py  flagprocessorext.py  fsmonitor-run-tests.py  generate-working-copy-states.py  get-with-headers.py  heredoctest.py  hghave  hghave.py  hgweberror.py  httpserverauth.py  hypothesishelpers.py  killdaemons.py  library-infinitepush.sh  list-tree.py  lockdelay.py  logexceptions.py  ls-l.py  md5sum.py  mockblackbox.py  mockmakedate.py  mocktime.py  (+676 more)
(+453 files in other folders)
