[package]
name = "chg"
version = "0.1.0"
authors = ["Yuya Nishihara <yuya@tcha.org>"]
description = "Client for Mercurial command server with cHg extension"
license = "GPL-2.0+"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
tokio = "0.1"
tokio-hglib = "0.2"
tokio-process = "0.2.3"
tokio-timer = "0.2"

[build-dependencies]
cc = "1.0"
